--- a/src/css/style.css
+++ b/src/css/style.css
@@ -207,7 +207,7 @@ header.top {
   text-align: center;
 }
 header.top h1 {
-  font-size: 14.4rem;
+  font-size: 120px;
   line-height: 0.7;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -218,18 +218,12 @@ header.top h1 {
 }
 header.top h1 .ofThe {
   display: flex;
-  font-size: 3rem;
-  color: #f5a623;
   align-items: center;
   background: url("images/bike.jpg") center no-repeat;
   background-size: cover;
-  padding: 0 1rem;
+  padding: 0 4rem;
 }
-header.top h1 .ofThe .of {
-  padding-right: 2rem;
-  position: relative;
-  right: -0.5rem;
-}
+
 header.top h3 {
   margin: 0;
   font-size: 2rem;
@@ -271,6 +265,15 @@ header.top h3:after {
           perspective: 1000px;
           transform-style: preserve-3d;
 }
+@media only screen and (max-width: 1024px){
+  .catch-of-the-day{
+    flex-direction: column;
+    height: 100%;
+  }
+}
+
+
+
 .catch-of-the-day > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 4 auto;
@@ -470,6 +473,8 @@ input[type=submit] {
   text-transform: uppercase;
   background: none;
   border: 1px solid #000;
+  width: 25%;
+  margin: 0 auto;
   font-weight: 600;
   font-size: 1.5rem;
   font-family: 'Open Sans';
@@ -481,6 +486,8 @@ input[type=submit] {
 button[disabled],
 input[type=submit][disabled] {
   color: #d12028;
+  width: 25%;
+  margin: 0 auto;
   background: #fff;
   border-color: #d12028;
   -webkit-transform: rotate(-10deg) scale(2) translateX(50%) translateY(-50%);
@@ -530,43 +537,7 @@ button.success:after,
 input[type=submit].success:after {
   background: #2dc22d;
 }
-button.github,
-input[type=submit].github,
-button.facebook,
-input[type=submit].facebook,
-button.twitter,
-input[type=submit].twitter {
-  border: 0;
-  display: block;
-  margin-bottom: 2rem;
-  width: 100%;
-  color: #fff;
-  padding: 2rem;
-}
-button.github,
-input[type=submit].github {
-  background: #82d465;
-}
-button.github:after,
-input[type=submit].github:after {
-  background: #5cc437;
-}
-button.facebook,
-input[type=submit].facebook {
-  background: #3864a3;
-}
-button.facebook:after,
-input[type=submit].facebook:after {
-  background: #2d5082;
-}
-button.twitter,
-input[type=submit].twitter {
-  background: #5ea9dd;
-}
-button.twitter:after,
-input[type=submit].twitter:after {
-  background: #2c8dd0;
-}
+
 .store-selector {
   background: #fff;
   max-width: 500px;
